--- a/package.json
+++ b/package.json
@@ -3,14 +3,36 @@
   "version": "1.0.0",
   "description": "react-portal",
   "main": "index.js",
+  "scripts": {
+    "start": "webpack-dev-server --config ./webpack/webpack.config.dev.js --progress --inline --hot",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "madhusudhan114@gmail.com",
+  "license": "ISC",
   "dependencies": {
-    "webpack": "^4.19.1"
+    "moment": "^2.22.2",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
+    "react-url-query": "^1.4.0",
+    "redux": "^4.0.0",
+    "redux-form": "^7.4.2",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -18,14 +40,11 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "eslint": "^5.6.0",
+    "gulp-babel": "^8.0.0",
     "react-hot-loader": "^4.3.11",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.1",
     "webpack-dev-middleware": "^3.4.0",
     "webpack-dev-server": "^3.1.9"
-  },
-  "scripts": {
-    "start": "webpack-dev-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "madhusudhan114@gmail.com",
-  "license": "ISC"
+  }
 }
